<resources>
    <string name="app_name">Tournament</string>
    <string name="insert_new_player">Insert new player</string>
    <string name="update_player">Update player</string>
    <string name="google" translatable="false">Google</string>
    <string name="info">Info</string>
    <string name="tournament">Tournament</string>
    <string name="nickname">Nickname</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="kdratio" translatable="false">KDRatio</string>
    <string name="exit">Exit</string>
    <string name="toastOnActivitiResultMainActivity">Success!</string>
    <string name="toastOnActivityResultMainActivityFailed">Failed!</string>
    <string name="insert">Insert</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="team_size">Team size</string>
    <string name="team_name">Team name</string>
</resources>